Allow extended/"L" back swipe to trigger actions/app/activities [2/2]
Change-Id: Iaba9c99d6896a9bf914c00c21569d37544b661be
Co-authored-by: DennySPb <dennyspb@gmail.com>
Co-authored-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/res/xml/alpha_settings_navigation.xml
+++ b/res/xml/alpha_settings_navigation.xml
@@ -69,6 +69,12 @@
         android:title="@string/navbar_actions_category_title"
         android:dependency="navbar_visibility">
 
+        <Preference
+            android:key="gesture_nav_custom_options"
+            android:title="@string/navbar_gesture_tweaks_pref_title"
+            android:summary="@string/navbar_gesture_tweaks_pref_summary"
+            android:fragment="com.alpha.settings.fragments.navigation.GestureTweaksSettings" />
+
          <ListPreference
             android:key="navigation_back_long_press"
             android:icon="@drawable/ic_single_tap"
