--- a/res/xml/alpha_settings_misc.xml
+++ b/res/xml/alpha_settings_misc.xml
@@ -72,7 +72,16 @@
         android:summary="@string/gms_enabled_summary"
         android:fragment="com.alpha.settings.fragments.misc.GmsSwitch"/> -->
 
-    <!-- Parallel space
+    <!-- Hide developer and adb status  -->
+    <Preference
+        android:key="hide_developer_status_settings"
+        android:icon="@drawable/ic_window_secure"
+        android:title="@string/hide_developer_status_title"
+        android:summary="@string/hide_developer_status_summary"
+        android:fragment="com.alpha.settings.fragments.misc.HideDeveloperStatusSettings"
+        settings:controller="com.alpha.settings.fragments.misc.HideDeveloperStatusPreferenceController" />
+
+    <!-- Parallel space -->
     <Preference
         android:key="parallel_space"
         android:icon="@drawable/ic_parallel_space"
