--- a/res/xml/alpha_settings_misc.xml
+++ b/res/xml/alpha_settings_misc.xml
@@ -78,10 +78,10 @@
         android:icon="@drawable/ic_window_secure"
         android:title="@string/hide_developer_status_title"
         android:summary="@string/hide_developer_status_summary"
-        android:fragment="com.alpha.settings.fragments.misc.HideDeveloperStatusSettings"
-        settings:controller="com.alpha.settings.fragments.misc.HideDeveloperStatusPreferenceController" />
+        android:fragment="com.android.settings.security.HideDeveloperStatusSettings"
+        settings:controller="com.android.settings.security.HideDeveloperStatusPreferenceController" />
 
-    <!-- Parallel space -->
+    <!-- Parallel space
     <Preference
         android:key="parallel_space"
         android:icon="@drawable/ic_parallel_space"
@@ -132,7 +132,7 @@
         android:defaultValue="true" />
 
     <!-- Display Cutout -->
-    <!--Preference
+    <Preference
         android:key="display_cutout_force_fullscreen_settings"
         android:icon="@drawable/ic_fullscreen"
         android:title="@string/display_cutout_force_fullscreen_title"
@@ -140,7 +140,7 @@
         <intent android:action="android.intent.action.MAIN"
              android:targetPackage="com.android.settings"
              android:targetClass="com.alpha.settings.fragments.misc.DisplayCutoutForceFullscreenActivity"/>
-    </Preference-->
+    </Preference>
 
     <!-- Screen Off animation -->
     <com.alpha.settings.preferences.SystemSettingListPreference
